--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <h1>Flatiron Widgets Store</h1>
 </head>
 <body>
-    <h1>Welcome To The Flatiron Store!</h1>
+    <h2>Welcome To Flatiron Widgets</h2>
     <%= yield %>
 </body>
 </html>
