--- a/app/views/layouts/static/home.html.erb
+++ b/app/views/layouts/static/home.html.erb
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <h1>Flatiron Widgets Store</h1>
-</head>
-<body>
-    <h2>Welcome To Flatiron Widgets</h2>
-    <%= yield %>
-</body>
-</html>
+<h2>Welcome Flatiron Admin</h2> 
